--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
-# Ignore all .mmd files
-*.mmd
-
-# Ignore specific files
-docs/5_CATALOG MAP.mmd
-docs/5_CATALOG_readme.md
-docs/6_USER_MAP.mmd
-docs/6_USER_MAP_documentation.md
-
-# Common files to ignore
+**/gitignore/
 .DS_Store
-.env
+.AppleDouble
+.LSOverride
+*.swp
+*.swo
+*~
+.idea/
+.vscode/
+*.sublime-workspace
+*.sublime-project
 *.log
-docs/gitignore/
